--- a/listings/templates/listings/home.html
+++ b/listings/templates/listings/home.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <title>iRent ProSpace – Find Your Dream Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'listings/style.css' %}">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-custom">
   <div class="container">
     <a class="navbar-brand" href="{% url 'home' %}">iRent ProSpace</a>
     <div>
-      <a class="btn btn-light btn-sm" href="{% url 'landlord_upload' %}">List Your Property</a>
+      <a class="btn" href="{% url 'landlord_upload' %}">List Your Property</a>
     </div>
   </div>
 </nav>
