user sign-up flow working

--- a/listings/templates/listings/home.html
+++ b/listings/templates/listings/home.html
@@ -13,6 +13,7 @@
     <a class="navbar-brand" href="{% url 'home' %}">iRent ProSpace</a>
     <div>
       <a class="btn" href="{% url 'landlord_upload' %}">List Your Property</a>
+      <a class="btn btn-sm ms-2" href="{% url 'signup' %}">Sign Up</a>
     </div>
   </div>
 </nav>
